# esp32-fridgecam

./: .gitignore  CMakeLists.txt  README.md
components/webcfg/: CMakeLists.txt  component.mk
components/webcfg/include/: cbtimer.h  server.h  webcfg.h
components/webcfg/private_include/: ping.h  wifi.h
components/webcfg/src/: cbtimer.c  ping.c  server.c  webcfg.c  wifi.c
main/: CMakeLists.txt  foto.c  foto.h  main.c
